# TMBot

./: .gitignore  README.md  demo.py  init_tmdata.py  train.py
Core/: IO.py  base.py  base_env.py  callbacks.py  env.py  extractors.py  gui.py  main.py  models.py  util.py
data/: TMData.op
data/TMData/: info.toml
data/TMData/Core/: IO.as  Main.as  Settings.as
data/TMData/TMDataInputSys/TMDataInputSys/: TMDataInputSys.cpp  TMDataInputSys.h  TMDataInputSys.vcxproj  cpp.hint
data/TMDataInputSys/: TMDataInputSys.sln
data/TMDataInputSys/TMDataInputSys/: TMDataInputSys.cpp  TMDataInputSys.h  TMDataInputSys.vcxproj.filters
docs/source/: conf.py  index.rst
docs/source/api/: io.rst  util.rst
docs/source/extras/: callbacks.rst  extractors.rst
docs/source/tmdata/: usage.rst
docs/source/tutorial/: basic.rst  start.rst
src/: pyproject.toml
src/tmbot/core/: IO.py  __init__.py  base.py  gui.py  util.py
src/tmbot/extras/: callbacks.py  extractors.py
tmbot/core/: IO.py  base.py  callbacks.py  demo.py  gui.py  util.py
